fix: eliminate all remaining -Xlint:deprecation warnings
Fix or suppress every deprecated-API warning surfaced by -Xlint:deprecation:

Actual replacements (code-level fixes):
- DMT.createFNPRejectedOverload(4-arg) → 2-arg in CHKInsertHandler,
  RequestHandler, SSKInsertHandler, AnnounceSender (12 call sites)
- new URL(String) → URI.create(s).toURL() in JarClassLoader, TextModeClientInterface,
  AddPeer, ConnectionsToadlet, PluginDownLoaderURL (6 call sites)
- new URL(base, loc) → URI.create(base.toString()).resolve(loc).toURL() in PluginDownLoaderURL
- Class.newInstance() → getDeclaredConstructor().newInstance() in JceLoader
- AESEngine() → AESEngine.newInstance() in BlockCiphers
- PluginManager.getPluginInfo() → getPluginInfoByClassName() in GetPluginInfo,
  ReloadPlugin, RemovePlugin
- new SubConfig(String, Config) → config.createSubConfig(String) in FirstTimeWizardToadlet
- IntOption(…, boolean isSize) → IntOption(…, Dimension.SIZE) in BandwidthOption

@SuppressWarnings("deprecation") with explanatory comments:
- Thread.getId() in DefaultThreadDiagnostics — Thread.threadId() is Java 19+,
  target runtime is Java 17
- KeyPairType.DSA in KeyGenUtils — referenced only to throw UnsupportedTypeException
- FCPConnectionHandler.connectionIdentifier in ClientHelloMessage — changes FCP wire format
- NodeClientCore.clientContext in QueueToadlet — requires larger refactor
- Toadlet.showAsToadlet() in InvisibleWebInterfaceToadlet — override required by design
- PluginInfoWrapper.isFCPPlugin() in PluginInfoMessage — old plugin FCP API compat needed
- PluginTalker in FCPPluginClientMessage — legacy code path kept for backward compat
- PluginReplySender in AbstractFCPHandler — whole class is legacy plugin FCP API
- PluginRespirator.getNode() in PluginContext — no non-deprecated replacement available
- Native.loadLibrary() in ProcessPriority — JNA 5.x Native.load() not yet adopted
- X509V3CertificateGenerator/X509Name/X509Extensions in SSL — bcpkix jar not in deps
- NodeStarter.