@@ -11,6 +11,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
@@ -120,7 +121,7 @@ public class AddPeer extends FCPMessage {
 					ref = AddPeer.getReferenceFromFreenetURI(refUri, client);
 				} catch (MalformedURLException | FetchException e) {
 					Logger.warning(this, "Url cannot be used as Freenet URI, trying to fetch as URL: " + urlString);
-					URL url = new URL(urlString);
+					URL url = URI.create(urlString).toURL();
 					ref = AddPeer.getReferenceFromURL(url);
 				}
 			} catch (MalformedURLException e) {
